# mlops2025_carla_mariane

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README-CI.md  README.md  data_processing.py  docker-compose.yml  model.py  pyproject.toml  requirements.txt  setup.cfg  test_docker_setup.sh  test_simple_pipeline.py
.github/: copilot-instructions.md
.github/workflows/: ci-pipeline.yml
config/: ci-config.yaml
configs/: main.yaml  pipeline.yaml  sagemaker_config.yaml  train.yaml  train_config.yaml
scripts/: batch_inference.py  feature_engineering.py  preprocess.py  run_batch_inference_pipeline.py  run_training_pipeline.py  setup.sh  train.py  train_with_sample.py  train_with_taxi_trainer.py
scripts/sagemaker/: inference_entrypoint.py  train_entrypoint.py
src/: main.py
src/mlproject/features/: __init__.py  distance.py  encoding.py  engineer.py  scaling.py  time_features.py
src/mlproject/inference/: __init__.py  pipeline.py  utils.py
src/mlproject/pipelines/: __init__.py  orchestrator.py  pipeline.py  sagemaker_inference.py  sagemaker_train.py
src/mlproject/preprocess/: __init__.py  advanced.py  clean.py
src/mlproject/train/: __init__.py  model_trainer.py  taxi_trainer.py  train.py  train.py.backup
tests/: conftest.py  test_example.py  test_inference.py  test_inference_backup.py
