[project]
name = "ml-project"
version = "0.1.0"
dependencies = [
    "pandas",
    "scikit-learn",
    "numpy",
    "pyarrow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.core"
[project.scripts]
train = "scripts.train:main"
inference = "scripts.batch_inference:main"

[project.optional-dependencies]
sagemaker = [
    "sagemaker>=2.207.0",
    "boto3>=1.34.0",
    "pyyaml>=6.0"
]
